# rust-course

./: Cargo.toml  README.md  input.txt  rustfmt.toml
courseproject/: topics.md
coursework/: МВ_КР_Системне Програмування.docx
exam/: 0assesment.md  exam.md  q1theory.md  q2rustpractice.md  q3hackerrank.md  q4extra.md  task1.rs
extra/: links-students.md
questionare/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md
recordings2025/: recordings-list.md
slides-keynote/: Rust1-intro.key  Rust10-impl-traits.key  Rust11-collections.key  Rust11-iterators.key  Rust12-iterators.key  Rust13-memory-TODO.key  Rust13-memory.key  Rust14-io-TODO.key  Rust14-io.key  Rust15-ecosystem-TODO.key  Rust15-ecosystem.key  Rust2-types.key  Rust3-arrays.key  Rust4-strings.key  Rust5-products.key  Rust6-coproducts.key  Rust7-pattern-matching.key  Rust7-patternmatching.key  Rust8-flow-control.key  Rust9-function-closure.key
slides-pdf/: list.txt
slides-pdf-2/: list.txt
src/: main.rs
src/hackerrank/: _the_simplest_list.md
src/homeworks/p03/: mod.rs
src/homeworks/p04/: mod.rs
src/homeworks/p05/: mod.rs
src/homeworks/p06/: mod.rs
src/homeworks/p07/: mod.rs
src/homeworks/p08/: mod.rs
src/homeworks/p09/: mod.rs
src/homeworks/p10/: mod.rs
src/homeworks/p11/: mod.rs
src/lectures/: mod.rs
src/practice/: list.md  mod.rs
surveys/: list.md
surveys/detailed/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md  12.md  13.md  14.md  15.md  tznk.md
syllabus/: deadlines.txt  fact.md  sem1.md  sem2.md
(+173 files in other folders)
