[package]
name = "rust-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
colored = "2.1.0"
rand = "^0.8.5" # 0.8.5+, <0.9.0
time = "0.3.36"
regex = "1.10.6"
chrono = "0.4.38"
