[package]
name = "rust-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
itertools = "0.14.0"
rand = "0.9.0"
sysinfo = "0.33.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0"
time = "0.3.37"
regex = "1.11.1"
chrono = "0.4.39"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }